k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: startup-api
  namespace: devops-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: startup-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: startup-api
                port:
                  number: 80
